app/[locale]/globals.css
/* @tailwind base;
@tailwind components;
@tailwind utilities; */
#overlay-transition {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 1);

    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999;
}

#overlay-loading {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0);

    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9999;
}

.spinner-grow {
    width: 1.5rem;
    height: 1.5rem;
}

.hover {
    cursor: pointer;
}

